@@ -170,7 +170,7 @@ UID	The user login ID
 GROUP	The user group name
 GID	The user group ID
 HOME	The user home directory
-HOST	Hostname (uname -n)
+SHOST	Short hostname (domain part removed if present)
 .fi
 .RE
 .sp
