@@ -77,6 +77,7 @@
 - only probe specific nfs version if requested.
 - fix bad mkdir permission on create.
 - setup program map env from macro table.
+- add short host name standard marco variable.
 
 25/07/2012 autofs-5.0.7
 =======================
